results/classifier/zero-shot/111/review/1543057
other: 0.185
semantic: 0.179
device: 0.143
graphic: 0.085
PID: 0.083
permissions: 0.052
files: 0.049
socket: 0.040
debug: 0.038
network: 0.037
vnc: 0.035
boot: 0.026
KVM: 0.026
performance: 0.023
debug: 0.553
other: 0.073
files: 0.059
PID: 0.054
device: 0.050
performance: 0.047
boot: 0.038
semantic: 0.038
socket: 0.020
network: 0.019
vnc: 0.014
permissions: 0.014
graphic: 0.011
KVM: 0.009

Warnings are treated as errors

System: Ubuntu 14.04, 32bit
Kernel: 3.13.0-55-generic
Qemu: v. 2.2.50

Error msg:

hw/acpi/pcihp.c: In function ‘acpi_pcihp_pc_no_hotplug’:
hw/acpi/pcihp.c:117:34: error: ‘PCIDevice’ has no member named ‘qdev’
     return (pc->is_bridge && !dev->qdev.hotplugged) || !dc->hotpluggable;
                                  ^
hw/acpi/pcihp.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors

I have same error "PCIDevice has no member named 'qdev'" with you.
Did you find any solutions to this error?

(a) That warnings are treated as errors  is a feature, not a bug (it happens for development builds only)
(b) the definition of struct PCIDevice in include/hw/pci/pci.h starts with "DeviceState qdev;" so it's not clear to me how that error could be produced in the first place

I see the original submitter was using 2.2.50 -- I suggest using either (a) a release build of QEMU or (b) current master. 2.2.50 will be from somewhere on trunk between 2.2 and 2.3, so might quite possibly have had a build bug that was quickly fixed subsequently.


Closing this as invalid - unless you can reproduce this with the latest release version or the current master branch again, then please feel free to open this ticket again.

